updated menu domain models to support more menu types